WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13060
REGRESSION: Repro ASSERT failure in Cache::adjustSize running layout tests
https://bugs.webkit.org/show_bug.cgi?id=13060
Summary
REGRESSION: Repro ASSERT failure in Cache::adjustSize running layout tests
Geoffrey Garen
Reported
2007-03-13 13:04:34 PDT
This bug is also in Radar as <
rdar://5060208
> * STEPS TO REPRODUCE run-webkit-tests --leaks fast/dom [12:47pm] darin: ASSERTION FAILED: delta >= 0 || ((int)m_liveResourcesSize + delta >= 0) [12:47pm] darin: (/Users/darin/Safari/OpenSource/WebCore/loader/Cache.cpp:352 void WebCore::Cache::adjustSize(bool, int)) Darin says this is reproducible 100% of the time. ------------------------------------------- <GMT13-Mar-2007 19:52:36GMT> Geoff Garen: I think this is a regression caused by Hyatt's recent cache changes.
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2007-03-14 10:09:10 PDT
CachedScript is dereferenced twice in fast/dom/script-element-gc.html, causing m_liveResourcesSize underflow.
Antti Koivisto
Comment 2
2007-03-14 13:59:30 PDT
r20194
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug